💄 style: fix watermark height jump on load

--- a/src/styles/layout/_menu.scss
+++ b/src/styles/layout/_menu.scss
@@ -94,7 +94,7 @@
     img {
       width: 100%;
       height: 100%;
-      min-height: 111vh;
+      min-height: 140vh;
     }
   }
 }
